# Turbo-Turtles

./: .gitignore  README.md  SENSOR_USAGE.md  WEEKLY.md  cam_setup.py  create_neg_img.py  image_edit.py  model_trained.p  neg.txt  package.xml  pos.lst  pos.vec  pos_stop.txt  pos_stop.vec  rename.py  setup.cfg  setup.py  testing.py  training.py
Presentations/: robotik-exposé.pptx
autorace_core/: README.md  package.xml  setup.cfg  setup.py
autorace_simulation/: CMakeLists.txt  README.md  package.xml
autorace_simulation/launch/: turtlebot3_autorace_2020.launch.py
autorace_simulation/worlds/: turtlebot3_autorace_2020.world
cascade/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
config/: mapping.rviz  tb3_map.pgm  tb3_map.yaml
example/: stop_sign_detection.py
lane_detection/: package.xml  setup.py
launch/: mapping.launch.py  navigation.launch.py
level_crossing/: package.xml  setup.cfg  setup.py
lidar_func/: mapping.py  nav_test.py  occupancy_grid_node.py  simple_commander_api.py  stick_to_wall.py  talker_test_node.py
lidar_junk_i_dont_want_to_see/: angle_listener.py  construction_site_test01.py  drive_1m.py  free_lot_test01.py  get_min_range.py  map_recognition2.py  map_recognition3.py  map_recognition_test01.py  map_recognition_test02.py  relative_coords.py  single_goal_nav.py  tunnel_mission_old.py  tunnel_mission_test01.py  tunnel_mission_test02.py  tunnel_mission_test03.py  tunnel_mission_test04.py  waypoint_follower.py  waypoint_nav.py
(+90 files in other folders)
